--- a/templates/settings.cnf.j2
+++ b/templates/settings.cnf.j2
@@ -15,6 +15,7 @@ max_allowed_packet             = {{ mariadb_options.max_allowed_packet }}
 
 innodb_buffer_pool_instances   = {{ mariadb_options.innodb_buffer_pool_instances }}
 innodb_buffer_pool_size        = {{ mariadb_options.innodb_buffer_pool_size }}
+innodb_log_file_size           = {{ mariadb_options.innodb_log_file_size }}
 table_cache                    = {{ mariadb_options.table_cache }}
 
 tmp_table_size                 = {{ mariadb_options.tmp_table_size }}
